# workshop-stm32f439

./: Cargo.toml  Embed.toml  STM32F439.svd  memory.x
.cargo/: config.toml
src/: game.rs  lib.rs  main.rs  rng.rs
