[package]
name = "stm32-morse"
version = "0.1.0"
authors = ["Dawid Królak <taavit@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
defmt = "0.3.6"
defmt-rtt = "0.4"
cortex-m-semihosting = "0.5.0"
stm32f4xx-hal = { version="0.20.0", features = ["stm32f439", "defmt", "usb_fs"]}
rand_core = "0.6.4"
fugit = { version = "0.3.7", features = ["defmt"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
fugit-timer = "0.1.3"
embedded_hal_02 = { package = "embedded-hal", version="0.2.7" }

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
